# vulkan_objects

./: .clang-format  CMakeLists.txt  README.md  SQUASH_PLAN.md
generate/: CMakeLists.txt  generate.cpp
include/scvk/: scvk_object.hpp
include/vko/: acceleration_structures.hpp  adapters.hpp  adaptors.hpp  allocator.hpp  array.hpp  bindings.hpp  bound_buffer.hpp  bound_image.hpp  command_recording.hpp  compute.hpp  config.hpp  device_address.hpp  dynamic_library.hpp  exceptions.hpp  formats.hpp  functions.hpp  glfw_objects.hpp  handle.hpp  handles.hpp  image.hpp  imgui_objects.hpp  implot_objects.hpp  nv_ngx.hpp  object.hpp  pnext_chain.hpp  query_pool.hpp  ray_tracing.hpp  scvk.hpp  scvk_context.hpp  scvk_volk.hpp  shaderc_compiler.hpp  shortcuts.hpp  slang_compiler.hpp  staging_memory.hpp  structs.hpp  surface.hpp  swapchain.hpp  timeline_queue.hpp  unique_any.hpp
src/: functions.cpp  functions.cpp.txt  functions.hpp.txt  gen_functions.cpp.txt  glfw_xcb_hack.cpp  handles.hpp.txt
src/include/vko/: functions.hpp.txt  gen_exceptions.hpp.txt  gen_formats.hpp.txt  gen_functions.hpp.txt  gen_handles.hpp.txt  gen_structures.hpp.txt  handles.hpp.txt
test/: CMakeLists.txt
test/shaders/: rasterTriangle.slang  raytrace.slang
test/src/: hello_triangle.cpp  test.cpp  test_context_create_info.hpp  test_context_fixtures.hpp  test_pnext_chain.cpp  test_query.cpp  test_staging.cpp  test_staging_images.cpp  test_staging_reuse_bug.cpp  test_timeline_queue.cpp  test_zero_cost.cpp
